2008-12-09  Don Porter	<dgp@users.sourceforge.net>

	TIP 337

	* generic/tkBind.c:	Updated callers of Tcl_BackgroundError()
	* generic/tkCanvas.c:	to use the new routine
	* generic/tkEntry.c:	Tcl_BackgroundException() as appropriate.
	* generic/tkImgBmap.c:
	* generic/tkListbox.c:
	* generic/tkSelect.c:
	* generic/tkTextDisp.c:
	* generic/tkTextWind.c:
	* macosx/tkMacOSXHLEvents.c:
	* macosx/tkMacOSXMenu.c:
	* macosx/tkMacOSXMenus.c:
	* macosx/tkMacOSXScale.c:
	* macosx/tkMacOSXWindowEvent.c:
	* unix/tkUnixScale.c:
	* unix/tkUnixWm.c:
	* win/tkWinButton.c:
	* win/tkWinMenu.c:
	* win/tkWinScrlbr.c:
	* win/tkWinWm.c:

2008-12-07  Joe English  <jenglish@users.sourceforge.net>

	* macosx/ttkMacOSXTheme.c: Add native aqua elements for
	ttk::spinbox [Bug 2219588]
	* generic/ttk/ttkEntry.c, library/ttk/spinbox.tcl,
	tests/ttk/spinbox.test: Moved most spinbox "business logic"
	out of ttkEntry.c into Tcl bindings.
	* library/ttk/clamTheme.tcl: Minor spinbox appearance improvements.
	* library/ttk/combobox.tcl, library/ttk/utils.tcl:
	Factor out ttk::bindMouseWheel procedure.
	* library/ttk/spinbox.tcl: Add cross-platform MouseWheel bindings.

2008-12-06  Donal K. Fellows  <dkf@users.sf.net>

	TIP #197 IMPLEMENTATION

	* generic/tkText.c (insertUnfocussedStrings, optionSpecs):
	* generic/tkText.h (TkText, TkTextInsertUnfocussed):
	* doc/text.n, tests/text.test:
	Added definitions/tests/docs for "-insertunfocussed" field.
	* generic/tkTextMark.c (TkTextInsertDisplayProc):
	* generic/tkText.c (TextBlinkProc):
	Added user-controlledrendering of insertion cursor when focus is not
	in the text widget.

2008-12-05  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* library/ttk/ttk.tcl:        Added vista theme to iron out the visual
	* library/ttk/vistaTheme.tcl: differences between vista and XP.
	* library/ttk/xpTheme.tcl:
	* win/ttkWinXPTheme.c:

2008-12-05  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkCanvPs.c (Tk_PostscriptFont): Ensure that font sizes can