@@ -134,6 +134,7 @@ TkpInit(
 	int i;
 	struct utsname name;
 	long osVersion = 0;
+	struct stat st;
 
 	initialized = 1;
 	
@@ -350,32 +351,30 @@ TkpInit(
 	 * clicking Wish) then use the Tk based console interpreter.
 	 */
 
-	if (!isatty(0)) {
-	    struct stat st;
+	if (getenv("TK_CONSOLE") ||
+		(!isatty(0) && (fstat(0, &st) ||
+		(S_ISCHR(st.st_mode) && st.st_blocks == 0)))) {
+	    Tk_InitConsoleChannels(interp);
+	    Tcl_RegisterChannel(interp, Tcl_GetStdChannel(TCL_STDIN));
+	    Tcl_RegisterChannel(interp, Tcl_GetStdChannel(TCL_STDOUT));
+	    Tcl_RegisterChannel(interp, Tcl_GetStdChannel(TCL_STDERR));
 
-	    if (fstat(0, &st) || (S_ISCHR(st.st_mode) && st.st_blocks == 0)) {
-		Tk_InitConsoleChannels(interp);
-		Tcl_RegisterChannel(interp, Tcl_GetStdChannel(TCL_STDIN));
-		Tcl_RegisterChannel(interp, Tcl_GetStdChannel(TCL_STDOUT));
-		Tcl_RegisterChannel(interp, Tcl_GetStdChannel(TCL_STDERR));
+	    /*
+	     * Only show the console if we don't have a startup script
+	     * and tcl_interactive hasn't been set already.
+	     */
 
-		/*
-		 * Only show the console if we don't have a startup script
-		 * and tcl_interactive hasn't been set already.
-		 */
+	    if (Tcl_GetStartupScript(NULL) == NULL) {
+		const char *intvar = Tcl_GetVar(interp,
+			"tcl_interactive", TCL_GLOBAL_ONLY);
 
-		if (Tcl_GetStartupScript(NULL) == NULL) {
-		    const char *intvar = Tcl_GetVar(interp,
-			    "tcl_interactive", TCL_GLOBAL_ONLY);
-
-		    if (intvar == NULL) {
-			Tcl_SetVar(interp, "tcl_interactive", "1",
-				TCL_GLOBAL_ONLY);
-		    }
+		if (intvar == NULL) {
+		    Tcl_SetVar(interp, "tcl_interactive", "1",
+			    TCL_GLOBAL_ONLY);
 		}
-		if (Tk_CreateConsoleWindow(interp) == TCL_ERROR) {
-		    return TCL_ERROR;
-		}
+	    }
+	    if (Tk_CreateConsoleWindow(interp) == TCL_ERROR) {
+		return TCL_ERROR;
 	    }
 	}
     }
